fixed sizing issues on calendar, dates with more events than can be fit by default scale with a scrollbar

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -78,7 +78,8 @@ body {
 
 table.calendar {
     width: 100%;
-    height: 75vh;
+    height: 70vh;
+    table-layout: fixed;
 }
 
 .month {
@@ -96,6 +97,28 @@ th.sun {
     height: 30px;
 }
 
+.date {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 div.alert-calendar {
     padding: 5px;
+    margin-bottom: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+td.day-cell {
+    
+}
+
+div.scrollable {
+    width: 100%;
+    height: 80%;
+    margin: 0;
+    padding: 0;
+    overflow: auto;    
 }
